--- a/style.css
+++ b/style.css
@@ -1,80 +1,58 @@
-:root{
-    --gradient: linear-gradient(0deg, #00000066 30%, #ffffff22 100%)
+body {
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
 }
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(4, 32vh);
-    grid-auto-rows: 32vh;
-  }
-
-.description {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 4;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 1vh 0.5vw;
+    height: calc(100vh - 2vh);
+    aspect-ratio: 1 / 1;
 }
 
-.city {
-    width: 95%;
-    height: 95%;
-    margin-left: 2.5%;
-    margin-top: 2.5%;
-    background-size: contain;
-    color: #F6F4F3;
-    font-family: Roboto, sans-serif;
-    font-size: 30px;
-    position: relative;
+.wrapper * {
+    background-color: lightblue;
 }
 
-.city span {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    text-align: center;
+.wrapper div:nth-of-type(1) {
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+    height: 70vh;
+    margin-top: 10vh;
 }
 
-#Ljubljana {
-    background-image: var(--gradient),
-    url("./images/Ljubljana_made_by_Janez_Kotar.jpg");
+.wrapper div:nth-of-type(2) {
+    height: 35vh;
+    margin-top: 0vh;
 }
 
-#Zagreb {
-    background-image: var(--gradient),
-    url("./images/640px-Zagreb_\(29255640143\).jpg");
+.wrapper div:nth-of-type(3) { 
+    grid-column: 2 / 3;
+    height: 55vh;
+    margin-top: -35vh;
 }
 
-#Split {
-    background-image: var(--gradient),
-    url("./images/Split_080620-133710-IMG_0968x.jpg");
+.wrapper div:nth-of-type(4) { 
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+    height: 55vh;
+    margin-top: 15vh;
 }
 
-#Sarajevo {
-    background-image: var(--gradient),
-    url("./images/Sarajevo_City_Panorama.jpeg");
+.wrapper div:nth-of-type(5) { 
+    grid-row: 1 / 2;
+    grid-column: 4 / 5;
+    height: 55vh;
+    margin-top: 5vh;
 }
 
-#Banja_Luka {
-    background-image: var(--gradient),
-    url("./images/Banja_luka.jpg");
-}
 
-#Belgrade {
-    background-image: var(--gradient),
-    url("./images/Belgrade_iz_balona.jpg");
-}
 
-#Novi_Sad {
-    background-image: var(--gradient),
-    url("./images/Danube_in_Novi_Sad_4.jpg");
-}
 
-#Podgorica {
-    background-image: var(--gradient),
-    url("./images/Titograd.jpg");
-}
 
-#Skopje {
-    background-image: var(--gradient),
-    url("./images/Stone_Bridge_Skopje_4.jpg");
-}
+
+
