--- a/style.css
+++ b/style.css
@@ -18,36 +18,44 @@ body {
     background-color: lightblue;
 }
 
+.wrapper .short{
+    aspect-ratio: 1 / 1;
+}
+
 .wrapper div:nth-of-type(1) {
     grid-row: 1 / 3;
     grid-column: 1 / 2;
-    height: 70vh;
-    margin-top: 10vh;
+    height: 48.5vh;
+    margin-top: 5vh;
+}
+
+.wrapper div:nth-of-type(2), .wrapper div:nth-of-type(3) {
+    grid-column: 2 / 3;
 }
 
 .wrapper div:nth-of-type(2) {
-    height: 35vh;
-    margin-top: 0vh;
+    margin-top: 20vh;
 }
 
-.wrapper div:nth-of-type(3) { 
-    grid-column: 2 / 3;
-    height: 55vh;
-    margin-top: -35vh;
+.wrapper div:nth-of-type(3) {
+    margin-top: -14vh;
 }
 
-.wrapper div:nth-of-type(4) { 
+.wrapper div:nth-of-type(4) {
     grid-row: 1 / 2;
     grid-column: 3 / 4;
-    height: 55vh;
-    margin-top: 15vh;
+    margin-top: 34.5vh;
 }
 
-.wrapper div:nth-of-type(5) { 
-    grid-row: 1 / 2;
+.wrapper div:nth-of-type(5) {
+    margin-top: 0.5vh;
+}
+
+.wrapper div:nth-of-type(6) {
+    grid-row: 1 / 3;
     grid-column: 4 / 5;
-    height: 55vh;
-    margin-top: 5vh;
+    height: 48.5vh;
+    margin-top: 50vh;
 }
 
 
