--- a/style.css
+++ b/style.css
@@ -3,30 +3,38 @@ body {
     margin-bottom: 1vh;
     margin-left: 0.5vw;
     margin-right: 0.5vw;
+    background-color: #011936;
+}
+
+.container {
+    display: flex;
+    grid-gap: 0.5vw;
 }
 
 .wrapper {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-gap: 1vh 0.5vw;
-    height: calc(100vh - 2vh);
+    grid-gap: 0.5vh 0.5vw;
+    height: 98vh;
     aspect-ratio: 1 / 1;
 }
 
-.wrapper * {
-    background-color: lightblue;
+.wrapper * img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .wrapper .short{
     aspect-ratio: 1 / 1;
+    width: 24.25vh;
 }
 
 .wrapper div:nth-of-type(1) {
     grid-row: 1 / 3;
     grid-column: 1 / 2;
     height: 48.5vh;
-    margin-top: 5vh;
 }
 
 .wrapper div:nth-of-type(2), .wrapper div:nth-of-type(3) {
@@ -34,31 +42,57 @@ body {
 }
 
 .wrapper div:nth-of-type(2) {
-    margin-top: 20vh;
+    margin-top: 16.15vh;
 }
 
 .wrapper div:nth-of-type(3) {
-    margin-top: -14vh;
+    margin-top: -15.65vh;
 }
 
 .wrapper div:nth-of-type(4) {
     grid-row: 1 / 2;
     grid-column: 3 / 4;
-    margin-top: 34.5vh;
+    margin-top: 32.3vh;
 }
 
-.wrapper div:nth-of-type(5) {
+.wrapper div:nth-of-type(5) img{
     margin-top: 0.5vh;
+    object-position: 26%;
 }
 
 .wrapper div:nth-of-type(6) {
     grid-row: 1 / 3;
     grid-column: 4 / 5;
     height: 48.5vh;
-    margin-top: 50vh;
+    margin-top: 49.5vh;
 }
 
+.wrapper div:nth-of-type(6) img {
+    object-position: 37%;
+}
 
+.info {
+    height: 98vh;
+    width: 52.5vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 0.5vh 0.5vw;
+}
+
+.info div:nth-of-type(1) {
+    background-color: #F9DC5C;
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+    padding: 7.5px;
+    font-size: 50px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.highlight {
+    text-decoration: underline;
+    text-decoration-color: #ED254E;
+}
 
 
 
