--- a/style.css
+++ b/style.css
@@ -20,10 +20,27 @@ body {
     aspect-ratio: 1 / 1;
 }
 
+.wrapper * {
+    position: relative;
+}
+
 .wrapper * img {
     height: 100%;
     width: 100%;
     object-fit: cover;
+    position: absolute;
+    mask-image: linear-gradient(0deg, #00000077 0%, #ffffffff 25%);
+    -webkit-mask-image: linear-gradient(0deg, #00000077 0%, #ffffffff 25%);
+}
+
+.wrapper * span {
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    color: white;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -100%);
 }
 
 .wrapper .short{
