--- a/style.css
+++ b/style.css
@@ -13,79 +13,88 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 0.5vh 0.5vw;
+    grid-template-columns: repeat(40, 1fr);
+    grid-template-rows: repeat(40, 1fr);
     height: 98vh;
     aspect-ratio: 1 / 1;
+    grid-gap: 7.5px;
 }
 
-.wrapper * {
-    position: relative;
+.wrapper .image {
+    background-color: lightblue;
 }
 
-.wrapper * img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    position: absolute;
-    mask-image: linear-gradient(0deg, #00000077 0%, #ffffffff 25%);
-    -webkit-mask-image: linear-gradient(0deg, #00000077 0%, #ffffffff 25%);
+.wrapper .data {
+    background-color: pink;
 }
 
-.wrapper * span {
-    font-family: 'Roboto', sans-serif;
-    font-size: 28px;
-    color: white;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -100%);
-}
-
-.wrapper .short{
-    aspect-ratio: 1 / 1;
-    width: 24.25vh;
+.wrapper .break {
+    background-color: lightgreen;
 }
 
 .wrapper div:nth-of-type(1) {
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
-    height: 48.5vh;
-}
-
-.wrapper div:nth-of-type(2), .wrapper div:nth-of-type(3) {
-    grid-column: 2 / 3;
+    grid-column: 1 / 9;
+    grid-row: 1 / 21;
 }
 
 .wrapper div:nth-of-type(2) {
-    margin-top: 16.15vh;
+    grid-column: 1 / 9;
+    grid-row: 21 / 41;
 }
 
 .wrapper div:nth-of-type(3) {
-    margin-top: -15.65vh;
+    grid-column: 9 / 25;
+    grid-row: 1 / 6;
 }
 
 .wrapper div:nth-of-type(4) {
-    grid-row: 1 / 2;
-    grid-column: 3 / 4;
-    margin-top: 32.3vh;
+    grid-column: 9 / 17;
+    grid-row : 6 / 26;
 }
 
-.wrapper div:nth-of-type(5) img{
-    margin-top: 0.5vh;
-    object-position: 26%;
+.wrapper div:nth-of-type(5) {
+    grid-column: 9 / 17;
+    grid-row: 26 / 31;
 }
 
 .wrapper div:nth-of-type(6) {
-    grid-row: 1 / 3;
-    grid-column: 4 / 5;
-    height: 48.5vh;
-    margin-top: 49.5vh;
+    grid-column: 17 / 25;
+    grid-row: 6 / 11;
 }
 
-.wrapper div:nth-of-type(6) img {
-    object-position: 37%;
+.wrapper div:nth-of-type(7) {
+    grid-column: 17 / 25;
+    grid-row: 11 / 31;
+}
+
+.wrapper div:nth-of-type(8) {
+    grid-column: 9 / 25;
+    grid-row: 31 / 41;
+}
+
+.wrapper div:nth-of-type(9) {
+    grid-column: 25 / 41;
+    grid-row: 1 / 16;
+}
+
+.wrapper div:nth-of-type(10) {
+    grid-column: 25 / 33;
+    grid-row: 16 / 36;
+}
+
+.wrapper div:nth-of-type(11) {
+    grid-column: 25 / 33;
+    grid-row: 36 / 41;
+}
+
+.wrapper div:nth-of-type(12) {
+    grid-column: 33 / 41;
+    grid-row: 16 / 21;
+}
+
+.wrapper div:nth-of-type(13) {
+    grid-column: 33 / 41;
+    grid-row: 21 / 41;
 }
 
 .info {
