--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     position: relative;
 }
 
-.wrapper * img {
+.wrapper .image img {
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -45,10 +45,6 @@ body {
 
 .wrapper .data {
     background-color: pink;
-}
-
-.wrapper .break {
-    background-color: lightgreen;
 }
 
 .wrapper * img {
@@ -152,7 +148,7 @@ body {
     grid-row: 1 / 3;
     grid-column: 1 / 2;
     padding: 7.5px;
-    font-size: 50px;
+    font-size: 2.7vw;
     font-family: 'Roboto', sans-serif;
 }
 
