--- a/belgrade-style.css
+++ b/belgrade-style.css
@@ -21,8 +21,15 @@
 .main img {
     height: 0;
     min-height: 100%;
-    width: 70%;
+    width: 100%;
     object-fit: cover;
 }
 
+.image {
+    flex: 7;
+}
+
+.map {
+    flex: 3;
+}
 
