--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 body {
-    margin-top: 1vh;
-    margin-bottom: 1vh;
     margin-left: 0.5vw;
     margin-right: 0.5vw;
     background-color: #011936;
@@ -13,10 +11,9 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(40, 1fr);
+    grid-template-columns: repeat(60, 1fr);
     grid-template-rows: repeat(40, 1fr);
-    height: 98vh;
-    aspect-ratio: 1 / 1;
+    aspect-ratio: 2 / 1;
     grid-gap: 7.5px;
 }
 
@@ -53,7 +50,7 @@ body {
     object-fit: cover;
 }
 
-.wrapper div:nth-of-type(1) {
+.wrapper #City1 {
     grid-column: 1 / 9;
     grid-row: 1 / 21;
 }
@@ -68,7 +65,7 @@ body {
     grid-row: 1 / 6;
 }
 
-.wrapper div:nth-of-type(4) {
+.wrapper #City2 {
     grid-column: 9 / 17;
     grid-row : 6 / 26;
 }
@@ -83,7 +80,7 @@ body {
     grid-row: 6 / 11;
 }
 
-.wrapper div:nth-of-type(7) {
+.wrapper #City3 {
     grid-column: 17 / 25;
     grid-row: 11 / 31;
 }
@@ -93,12 +90,12 @@ body {
     grid-row: 31 / 41;
 }
 
-.wrapper div:nth-of-type(9) {
+.wrapper #City4 {
     grid-column: 25 / 41;
     grid-row: 1 / 16;
 }
 
-.wrapper div:nth-of-type(10) {
+.wrapper #City5 {
     grid-column: 25 / 33;
     grid-row: 16 / 36;
 }
@@ -113,7 +110,7 @@ body {
     grid-row: 16 / 21;
 }
 
-.wrapper div:nth-of-type(13) {
+.wrapper #City6 {
     grid-column: 33 / 41;
     grid-row: 21 / 41;
 }
@@ -137,19 +134,10 @@ body {
 .info {
     height: 98vh;
     width: 52.5vw;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 0.5vh 0.5vw;
-}
-
-.info div:nth-of-type(1) {
-    background-color: #F9DC5C;
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
-    padding: 7.5px;
-    font-size: 2.7vw;
+    background-color:#F9DC5C;
+    font-size: 1.75vw;
     font-family: 'Roboto', sans-serif;
+    padding: 7.5px;
 }
 
 .highlight {
